...
            )
        }

        Spacer(modifier = Modifier.height(24.dp))

        Text(
            text = "Welcome back",
            fontSize = 28.sp,
            fontWeight = FontWeight.Bold
        )

        Spacer(modifier = Modifier.height(8.dp))

...
        Spacer(modifier = Modifier.height(32.dp))

        // Email / Mobile
        OutlinedTextField(
            value = email,
            onValueChange = { email = it },
            modifier = Modifier.fillMaxWidth().testTag("emailInput"),
            label = { Text("Email / Mobile Number") },
            placeholder = { Text("Enter your email or phone") },
            shape = RoundedCornerShape(12.dp)
        )

        Spacer(modifier = Modifier.height(16.dp))

        // Password
        OutlinedTextField(
            value = password,
            onValueChange = { password = it },
            modifier = Modifier.fillMaxWidth().testTag("passwordInput"),
            label = { Text("Password") },
            placeholder = { Text("Enter your password") },
            shape = RoundedCornerShape(12.dp),
            visualTransformation = if (passwordVisible)
                VisualTransformation.None
            else
...
        // Forgot Password
        Row(
            modifier = Modifier.fillMaxWidth(),
            horizontalArrangement = Arrangement.End,
        ) {
            Text(
                text = "Forgot Password?",
                color = Color(0xFF1E6CF1),
                modifier = Modifier.clickable(onClick = {navController.navigate("changepassword")})
            )
        }

        Spacer(modifier = Modifier.height(24.dp))
...
                }
            },
            enabled = loginUiState !is LoginUiState.Loading && email.isNotBlank() && password.isNotBlank(),
            modifier = Modifier
                .fillMaxWidth()
                .height(56.dp)
                .testTag("loginButton"),
            shape = RoundedCornerShape(14.dp),
            colors = ButtonDefaults.buttonColors(
                containerColor = Color(0xFF1E6CF1)
            )
        ) {
            if (loginUiState is LoginUiState.Loading) {
...
                .fillMaxWidth()
                .height(56.dp),
            shape = RoundedCornerShape(14.dp),
            border = ButtonDefaults.outlinedButtonBorder
        ) {
            Text(
                text = "Create an Account",
                fontSize = 16.sp,
                color = Color(0xFF1E6CF1)
            )
        }
    }
}
...
