...
            selected = currentRoute == "active_tickets",
            onClick = {
                if (currentRoute != "active_tickets") {
                    navController.navigate("activetickets")
                }
            },
            icon = { Icon(Icons.Default.ConfirmationNumber, contentDescription = "Tickets") },
            label = { Text("Tickets") }
        )

        NavigationBarItem(
            selected = currentRoute == "trip_history",
            onClick = {
                if (currentRoute != "trip_history") {
                    navController.navigate("triphistory")
                }
            },
            icon = { Icon(Icons.AutoMirrored.Filled.ReceiptLong, contentDescription = "History") },
            label = { Text("History") }
        )

        NavigationBarItem(
            selected = currentRoute == "profile",
            onClick = {
...
